[package]
name = "intbits"
description = "Easy access to individual bits of integers"
version = "0.2.1"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
license = "BSD-2-Clause"
edition = "2018"
repository = "https://github.com/fusion-engineering/intbits"
keywords = ["int", "bit", "bits"]
categories = ["no-std"]

[dependencies]
